2013-11-20  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/stdlib.h (realpath): Drop declaration.  It's declared
	in newlib's stdlib.h now.

2013-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (RtlGetVersion): Declare.
	* wincap.cc (wincapc::init): Rather than GetVersionEx, call
	RtlGetVersion which is not crippled by missing Windows 8.1 manifest.
	* wincap.h (wincapc): Change type of version to RTL_OSVERSIONINFOEXW.
	Align formatting of all class members.

2013-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.cc (wincapc::init): Revert previous change.  It's not working.

2013-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_getaddrinfo): Fix a comment.  Only memset whints if
	hints is NULL.  Add a comment and set whints.ai_family explicitely to
	AF_UNSPEC to follow glibc man page closely.  Check flags against whints
	for locality.

2013-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.cc (wincapc::init): Fix dwMinorVersion for Windows 8.1 and
	Server 2012.  Explain why this is necessary.

2013-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (IdnToAscii): Define.
	(IdnToUnicode): Define.
	(FreeAddrInfoW): Define.
	(GetAddrInfoW): Define.
	(GetNameInfoW): Define.
	* net.cc: Drop W. Richard STEVENS libgai implementation.
	(cygwin_freeaddrinfo): Move code from ipv4_freeaddrinfo here.  Move
	definition up in file to avoid forward declaration in ga_duplist.
	(ga_dup): Take addrinfoW as input.  Add parameters to get IDN flags
	and to set error value.  Handle IDN flags and especially AI_CANONIDN.
	Convert input wchar_t ai_canonname string to multibyte for output.
	(ga_duplist): Add parameters to get IDN flags and to set error value
	and propagate to ga_dup.  Call cygwin_freeaddrinfo.
	(gai_errmap): Add comments.  Align error strings to GLibc.  Add
	EAI_IDN_ENCODE entry.
	(get_ipv6_funcs): Remove.
	(load_ipv6_guard): Remove.
	(ipv6_inited): Remove.
	(load_ipv6): Remove.
	(load_ipv6_funcs): Remove.